# telegram-member-inviter

./: .gitignore  LICENSE  README.md  __main__.py  bot-backup-helper-syntaxes.py  bot.py  build.py  index.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml
tmi/: __init__.py  banner.py  cli.py  util.py
tmi/kernel/: __init__.py
