[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "telegram-member-inviter"
version = "1.2.0"
requires-python = ">=3.11"
description = "A telegram member inviter application."
readme = "README.md"
authors = [
  {name = "@mjavadhpour"}
]
license = { file = "LICENSE" }
dependencies = [
  "rich~=13.6.0",
  "telethon~=1.31.0",
  "pyinstaller~=6.0.0",
  "pysocks~=1.7.1"
]

[project.optional-dependencies]

[project.scripts]
